Fixes #15672: Add support for tables to the collapse plugin

--- a/less/component-animations.less
+++ b/less/component-animations.less
@@ -22,6 +22,7 @@
   &.in      { display: block; visibility: visible; }
   tr&.in    { display: table-row; }
   tbody&.in { display: table-row-group; }
+  table&.in { display: table; }
 }
 
 .collapsing {
